<resources>
    <string name="app_name">IStreamV3</string>

    <string name="action_settings">Change Language</string>
    <string name="dody_rifki_suraya">Dody Rifki Suraya</string>
    <string name="dodyrifkisuraya_gmail_com">dodyrifkisuraya@gmail.com</string>

    <string name="dummyBahasa">Indonesia</string>
    <string name="dummyOverview">Lorem Ipsum is simply dummy text of the printing </string>
    <string name="dummyRilis">2 January 2019</string>
    <string name="dummyRating">(7.5/10) dari 1000 Ratingers</string>
    <string name="dummyJudul">JUDUL</string>

    <string name="rating">Rating : </string>
    <string name="date_of_release">Date of Release :</string>
    <string name="overview">Overview :</string>
    <string name="original_language">Original Language :</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="succes_add">Succes to add Favorite</string>
    <string name="fail_add">Fail to add Favorite</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="favorit_movie">Favorit Movie</string>
    <string name="favorit_tv_show">Favorit Tv Show</string>
    <string name="logo">logo</string>
    <string name="star">star</string>
    <string name="banner">banner</string>
</resources>