<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/movie" />
        <item
            android:id="@+id/nav_tvshow"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/tv_show" />
        <item
            android:id="@+id/nav_fav_movie"
            android:icon="@drawable/ic_movie_filter_black_24dp"
            android:title="@string/favorit_movie" />
        <item
            android:id="@+id/nav_fav_tvshow"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/favorit_tv_show" />
    </group>
</menu>